fix: first row vertical alignment

--- a/docs/css/week1.css
+++ b/docs/css/week1.css
@@ -48,6 +48,7 @@ a{
     color: gray;
 }
 .row{
+    position: relative;
     height: 55em;
 }
 .top-row{
